# pea-met-network

./: .gitignore  IMPLEMENTATION_PLAN.md  Makefile  README.md  analysis.ipynb  analysis_executed.ipynb  cleaning.py  codemap.md  pyproject.toml  requirements-dev.txt  requirements.txt
.cartography/: cartography.json  codemap-src_pea_met_network.md  codemap-src_pea_met_network_adapters.md  codemap.md
dashboard/: index.html  redundancy.html
docs/: MISS-HOOVER-PATTERN.md  artifact-validation.json  cleaning-config.json  data-sources.md  fwi-forecast-plan.md  gate-inject.md  licor-ingestion-plan.md  lineage.jsonl  lisa-prompt.md  loop-log.jsonl  loop-prompt.md  martin-lint.json  martin-prompt.md  orchestrator-prompt.md  pre-flight.json  ralph-prompt.md  ralph-state.json  test-inventory.json  validation.json  working-agreement.md
notebooks/: 01_explore.ipynb
scripts/: backfill_historical_fwi.py  fit_ols_coefficients.py  hindcast_validation.py  martin-lint.py  orch_state.py  post-commit-hook.sh  record_verdict.py  run_orchestrator.py  sync_state.py  validate_artifacts.py  validate_ols_vs_direct.py  validate_owm_rh_bias.py
specs/: 01-project-contract.md  02-data-pipeline.md  03-stanhope-reference.md  04-fwi.md  05-redundancy.md  06-phases-9-11.md  06-uncertainty.md  07-loop-guardrails.md  08-deliverables.md  08-remediation.md  processed-data-contract.md
src/: codemap.md
tests/: test_data_refresh.py  test_deliverables.py  test_explore_smoke.py  test_fwi_vectors.py  test_manifest.py  test_materialize_resampled.py  test_normalized_loader.py  test_phase11_dual_mode_fwi.py  (+15 more)
(+234 files in other folders)
