[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pea-met-network"
version = "0.1.0"
description = "DATA-3210 PEI meteorological network optimization project"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 80
target-version = "py311"
src = ["src", "tests", "cleaning.py"]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "W",
  "C90",
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
